tests/typechecking/valid/adder-fun-IntNegInt.ml
let rec make_adder x y=
  let rec adder y = x + y in
  adder y in
print_int (make_adder 3 -7)
